fix bug 920970 - Fix left column vertical alignment

--- a/media/redesign/stylus/zones.styl
+++ b/media/redesign/stylus/zones.styl
@@ -47,6 +47,9 @@
         width 100%
         z-index 2
 
+      .zone-landing-header-spacing
+        float left
+
   .crumbs
     color #fff
 
